--- a/myqtt-web-socket-1.0.pc.in
+++ b/myqtt-web-socket-1.0.pc.in
@@ -8,4 +8,4 @@ Description: WebSocket support for MyQtt, a high performance open source MQTT im
 Requires: myqtt-1.0
 Version: @MYQTT_VERSION@
 Libs: -L${libdir} -lmyqtt-web-socket-1.0 @PTHREAD_LIBS@
-Cflags: -I${includedir}/myqtt-1.0 @PTHREAD_CFLAGS@
+Cflags: -I${includedir}/myqtt-1.0 @PTHREAD_CFLAGS@ -DENABLE_WEBSOCKET_SUPPORT
