myqtt: * [fix] Several updates and modifications to implement initial modules   to handle domains and users. Added first regression test to check   support to launch plugable auth backend and associate the context   domain and transfer received connection into it. Still more work   is required.

--- a/server/Makefile.am
+++ b/server/Makefile.am
@@ -1,3 +1,5 @@
+SUBDIRS = modules
+
 EXTRA_DIST = myqttd-ctx-private.h \
 	test_01.conf
 
@@ -62,7 +64,8 @@ libmyqttdinclude_HEADERS    = \
 	myqttd-loop.h \
 	myqttd-process.h \
 	myqttd-child.h \
-	myqttd-domain.h
+	myqttd-domain.h \
+	myqttd-users.h
 
 libmyqttd_la_SOURCES = \
 	exarg.c \
@@ -79,7 +82,8 @@ libmyqttd_la_SOURCES = \
 	myqttd-loop.c \
 	myqttd-process.c \
 	myqttd-child.c \
-	myqttd-domain.c
+	myqttd-domain.c \
+	myqttd-users.c
 
 libmyqttd_la_LIBADD = $(AXL_LIBS)  $(PCRE_LIBS) 
 libmyqttd_la_LDFLAGS = -Wl,-export-dynamic -ldl -no-undefined -export-symbols-regex '^(myqttd|__myqttd|exarg).*'
