--- a/server/myqtt.example.conf
+++ b/server/myqtt.example.conf
@@ -124,6 +124,10 @@
 	    storage="/var/lib/myqtt/example.com" 
 	    users-db="/var/lib/myqtt-dbs/example.com">
       <!-- domain specific settings -->
+      <!-- require authentication: yes, so valid username/password is required, no: anonymous connection is allowed -->
+      <require-auth value="yes" />
+      <!-- force clients to have a registered id recognized by the database: yes (restrict), no (allow using any client id) -->
+      <restrict-ids value="yes" />
     </domain>
     
     <!-- include more domain declarations from the following directory -->
