--- a/server/test_01.conf
+++ b/server/test_01.conf
@@ -97,7 +97,7 @@
   <modules>
     
     <!-- directory where to find modules to load -->
-    <directory src="/etc/myqtt/mods-enabled" /> 
+    <directory src="reg-test-01/modules" /> 
     <!-- alternative directory -->
     <!-- <directory src="../mods-enabled" />  -->
     <no-load>
@@ -121,8 +121,12 @@
          (users-db) and where it is storing messages in transit
          (storage) -->
     <domain name="test_01.context" 
-	    storage="test_01/storage" 
-	    users-db="test_01/users">
+	    storage="reg-test-01/storage" 
+	    users-db="reg-test-01/users">
+      <!-- require authentication: yes, so valid username/password is required, no: anonymous connection is allowed -->
+      <require-auth value="yes" />
+      <!-- force clients to have a registered id recognized by the database: yes (restrict), no (allow using any client id) -->
+      <restrict-ids value="yes" />
       <!-- domain specific settings -->
     </domain>
 
