myqtt: * [fix] Added regression test to check 50 connections sending 50   conections..Everything correct.

--- a/server/Makefile.am
+++ b/server/Makefile.am
@@ -1,7 +1,8 @@
 SUBDIRS = modules
 
 EXTRA_DIST = myqttd-ctx-private.h \
-	test_01.conf
+	test_01.conf \
+	test_02.conf
 
 etcdir = $(sysconfdir)/myqtt
 etc_DATA = myqtt.example.conf
