--- a/server/test_02.conf
+++ b/server/test_02.conf
@@ -112,6 +112,41 @@
     </no-load>
   </modules>
 
+  <!-- the following allows to group configuration settings into
+       groups that then can be applied to domains. Each configuration
+       setting is identified by a <domain-setting> node. Then, the
+       node <global-settings> includes global settings that are
+       configured to all domain-setting nodes unless they say
+       something about. -->
+  <domain-settings>
+      <global-settings>
+          <!-- require authentication: yes, so valid username/password is
+	       required, no: anonymous connection is allowed -->
+	  <require-auth value="yes" />
+	  <!-- force clients to have a registered id recognized by the
+	       database: yes (restrict), no (allow using any client id)
+	  -->
+	  <restrict-ids value="yes" />
+      </global-settings>
+
+      <!-- now group of settings -->
+      <!-- settings for basic domains -->
+      <domain-setting name="basic">
+	<conn-limit value="5" /> <!-- amount of concurrent connections -->
+	<message-size-limit value="32768" /> <!-- 32k max message size allowed, use -1 for no limits (256MB) -->
+	<storage-messages-limit value="10000" /> <!-- max amount of messages in storage, use -1 for no limits -->
+	<storage-quota-limit value="102400" /> <!-- max amount of space used (100MB) -->
+      </domain-setting>
+      
+      <!-- settings for standard domains -->
+      <domain-setting name="standard">
+      	<conn-limit value="10" /> <!-- amount of concurrent connections -->
+	<message-size-limit value="65536" /> <!-- 32k max message size allowed, use -1 for no limits (256MB) -->
+	<storage-messages-limit value="20000" /> <!-- max amount of messages in storage, use -1 for no limits -->
+	<storage-quota-limit value="204800" /> <!-- max amount of space used (200MB), value in KB -->
+      </domain-setting>
+  </domain-settings>
+
   <!-- myqtt domains: list of group of myqtt users/devices we accept
        for this server and how they are groupped and assigned to an
        specific running user -->
@@ -120,28 +155,12 @@
     <!-- simple declaration for a domain with a set of users
          (users-db) and where it is storing messages in transit
          (storage) -->
-    <domain name="test_01.context" 
-	    storage="reg-test-01/storage" 
-	    users-db="reg-test-01/users">
-      <!-- require authentication: yes, so valid username/password is required, no: anonymous connection is allowed -->
-      <require-auth value="yes" />
-      <!-- force clients to have a registered id recognized by the database: yes (restrict), no (allow using any client id) -->
-      <restrict-ids value="yes" />
-      <!-- domain specific settings -->
-    </domain>
+    <domain name="test_01.context"  storage="reg-test-01/storage" users-db="reg-test-01/users" use-settings="standard" />
 
     <!-- simple declaration for a domain with a set of users
          (users-db) and where it is storing messages in transit
          (storage) -->
-    <domain name="test_02.context" 
-	    storage="reg-test-02/storage" 
-	    users-db="reg-test-02/users">
-      <!-- require authentication: yes, so valid username/password is required, no: anonymous connection is allowed -->
-      <require-auth value="yes" />
-      <!-- force clients to have a registered id recognized by the database: yes (restrict), no (allow using any client id) -->
-      <restrict-ids value="yes" />
-      <!-- domain specific settings -->
-    </domain>
+    <domain name="test_02.context" storage="reg-test-02/storage" users-db="reg-test-02/users" use-settings="basic" />
 
   </myqtt-domains>
   
