--- a/server/myqtt.example.conf
+++ b/server/myqtt.example.conf
@@ -112,6 +112,42 @@
     </no-load>
   </modules>
 
+  <!-- the following allows to group configuration settings into
+       groups that then can be applied to domains. Each configuration
+       setting is identified by a <domain-setting> node. Then, the
+       node <global-settings> includes global settings that are
+       configured to all domain-setting nodes unless they say
+       something about. -->
+  <domain-settings>
+      <global-settings>
+          <!-- require authentication: yes, so valid username/password is
+	       required, no: anonymous connection is allowed -->
+	  <require-auth value="yes" />
+	  <!-- force clients to have a registered id recognized by the
+	       database: yes (restrict), no (allow using any client id)
+	  -->
+	  <restrict-ids value="yes" />
+      </global-settings>
+
+      <!-- now group of settings -->
+      <!-- settings for basic domains -->
+      <domain-setting name="basic">
+	<conn-limit value="5" /> <!-- amount of concurrent connections -->
+	<message-size-limit value="32768" /> <!-- 32k max message size allowed, use -1 for no limits (256MB) -->
+	<storage-messages-limit value="10000" /> <!-- max amount of messages in storage, use -1 for no limits -->
+	<storage-quota-limit value="102400" /> <!-- max amount of space used (100MB) -->
+      </domain-setting>
+      
+      <!-- settings for standard domains -->
+      <domain-setting name="standard">
+      	<conn-limit value="10" /> <!-- amount of concurrent connections -->
+	<message-size-limit value="65536" /> <!-- 32k max message size allowed, use -1 for no limits (256MB) -->
+	<storage-messages-limit value="20000" /> <!-- max amount of messages in storage, use -1 for no limits -->
+	<storage-quota-limit value="204800" /> <!-- max amount of space used (200MB), value in KB -->
+      </domain-setting>
+  </domain-settings>
+
+
   <!-- myqtt domains: list of group of myqtt users/devices we accept
        for this server and how they are groupped and assigned to an
        specific running user -->
@@ -120,15 +156,7 @@
     <!-- simple declaration for a domain with a set of users
          (users-db) and where it is storing messages in transit
          (storage) -->
-    <domain name="example.com" 
-	    storage="/var/lib/myqtt/example.com" 
-	    users-db="/var/lib/myqtt-dbs/example.com">
-      <!-- domain specific settings -->
-      <!-- require authentication: yes, so valid username/password is required, no: anonymous connection is allowed -->
-      <require-auth value="yes" />
-      <!-- force clients to have a registered id recognized by the database: yes (restrict), no (allow using any client id) -->
-      <restrict-ids value="yes" />
-    </domain>
+    <domain name="example.com" storage="/var/lib/myqtt/example.com" users-db="/var/lib/myqtt-dbs/example.com" use-settings="basic" />
     
     <!-- include more domain declarations from the following directory -->
     <include dir="/etc/myqtt/domains.d/" />
