myqtt: * [fix] Several updates to allow libmyqtt to skip storage initialization   if configured so.
* [fix] Updated myqttd server code to avoid storage initialization on the
  main context and activate them on the domain contexts created.

* [new] Updated libmyqtt API to include a new set of functions that are
  called when a message is about to be released. 
  API added:

  - myqtt_ctx_set_on_release
  - MyQttOnReleaseMsg

* [new] Added initial code to myqttd server to track storage quota for
  every client id by using on store and on release handlers. Still more
  tasks have to be done.

--- a/server/test_02.conf
+++ b/server/test_02.conf
@@ -145,6 +145,14 @@
 	<storage-messages-limit value="20000" /> <!-- max amount of messages in storage, use -1 for no limits -->
 	<storage-quota-limit value="204800" /> <!-- max amount of space used (200MB), value in KB -->
       </domain-setting>
+
+      <!-- settings for standard domains -->
+      <domain-setting name="small-quota">
+      	<conn-limit value="10" /> <!-- amount of concurrent connections -->
+	<message-size-limit value="65536" /> <!-- 32k max message size allowed, use -1 for no limits (256MB) -->
+	<storage-messages-limit value="20" /> <!-- max amount of messages in storage, use -1 for no limits -->
+	<storage-quota-limit value="20" /> <!-- max amount of space used (1MB), value in KB -->
+      </domain-setting>
   </domain-settings>
 
   <!-- myqtt domains: list of group of myqtt users/devices we accept
@@ -161,6 +169,11 @@
          (users-db) and where it is storing messages in transit
          (storage) -->
     <domain name="test_02.context" storage="reg-test-02/storage" users-db="reg-test-02/users" use-settings="standard" />
+
+    <!-- simple declaration for a domain with a set of users
+         (users-db) and where it is storing messages in transit
+         (storage) -->
+    <domain name="test_03.context" storage="reg-test-03/storage" users-db="reg-test-03/users" use-settings="small-quota" />
 
   </myqtt-domains>
   
