myqtt: * [fix] Finished support to checking and enforcing message quotas   at server side (myqttd). Finished initial full working test_09 check.

--- a/server/Makefile.am
+++ b/server/Makefile.am
@@ -39,7 +39,7 @@ myqttd_LDFLAGS = -Wl,-export-dynamic -ldl
 myqttd_LDADD = $(AXL_LIBS) libmyqttd.la $(top_builddir)/lib/libmyqtt-1.0.la 
 
 # test_01
-test_01_SOURCES = test_01.c
+test_01_SOURCES = test_01.c test_01.h
 
 test_01_LDFLAGS = -Wl,-export-dynamic -ldl
 
