--- a/server/test_02.conf
+++ b/server/test_02.conf
@@ -151,7 +151,7 @@
       	<conn-limit value="10" /> <!-- amount of concurrent connections -->
 	<message-size-limit value="65536" /> <!-- 32k max message size allowed, use -1 for no limits (256MB) -->
 	<storage-messages-limit value="20" /> <!-- max amount of messages in storage, use -1 for no limits -->
-	<storage-quota-limit value="20" /> <!-- max amount of space used (1MB), value in KB -->
+	<storage-quota-limit value="20" /> <!-- max amount of space used (20KB), value in KB -->
       </domain-setting>
   </domain-settings>
 
