--- a/server/Makefile.am
+++ b/server/Makefile.am
@@ -2,7 +2,8 @@ SUBDIRS = modules
 
 EXTRA_DIST = myqttd-ctx-private.h \
 	test_01.conf \
-	test_02.conf
+	test_02.conf \
+	test_10.conf
 
 etcdir = $(sysconfdir)/myqtt
 etc_DATA = myqtt.example.conf
