myqtt: * [fix] Added initial support for SNI TLS indication so the library can   handle this indication and select the right certificate to work with.   Added initial code for test_19a and test_11 (libmyqtt and myqttd).   Still more work is required.

--- a/server/Makefile.am
+++ b/server/Makefile.am
@@ -18,6 +18,11 @@ if ENABLE_TERMIOS
 INCLUDE_TERMIOS=-DENABLE_TERMIOS
 endif
 
+if ENABLE_TLS_SUPPORT
+INCLUDE_TLS_FLAGS=-DENABLE_TLS_SUPPORT $(TLS_CFLAGS) -I$(top_srcdir)/tls
+INCLUDE_TLS_LIBS=$(TLS_LIBS) $(top_builddir)/tls/libmyqtt-tls-1.0.la 
+endif
+
 INCLUDES = $(compiler_options) -DCOMPILATION_DATE=`date +%s` -D__COMPILING_MYQTTD__ -D_POSIX_C_SOURCE  \
 	   -DMYQTT_VERSION=\"$(MYQTT_VERSION)\" -DVERSION=\"$(MYQTT_VERSION)\" -DAXL_VERSION=\"$(AXL_VERSION)\" -I$(top_srcdir)/lib \
 	   -DSYSCONFDIR=\""$(sysconfdir)"\" -DDEFINE_CHROOT_PROTO -DDEFINE_KILL_PROTO -DDEFINE_MKSTEMP_PROTO \
@@ -25,7 +30,7 @@ INCLUDES = $(compiler_options) -DCOMPILATION_DATE=`date +%s` -D__COMPILING_MYQTT
 	   -DMYQTTD_RUNTIME_DATADIR=\""$(runtimedatadir)"\" \
 	   -DMYQTTD_DATADIR=\""$(datadir)"\" $(INCLUDE_PCRE_SUPPORT) $(PCRE_CFLAGS) $(INCLUDE_TERMIOS) $(EXARG_FLAGS) \
 	   -D__MYQTTD_ENABLE_DEBUG_CODE__ \
-	   $(AXL_CFLAGS)  -g -Wall -Werror -Wstrict-prototypes 
+	   $(AXL_CFLAGS)  -g -Wall -Werror -Wstrict-prototypes $(INCLUDE_TLS_FLAGS)
 
 bin_PROGRAMS = myqttd 
 
@@ -44,7 +49,7 @@ test_01_SOURCES = test_01.c test_01.h
 
 test_01_LDFLAGS = -Wl,-export-dynamic -ldl
 
-test_01_LDADD = $(AXL_LIBS) libmyqttd.la $(top_builddir)/lib/libmyqtt-1.0.la 
+test_01_LDADD = $(AXL_LIBS) $(INCLUDE_TLS_LIBS) libmyqttd.la $(top_builddir)/lib/libmyqtt-1.0.la 
 
 lib_LTLIBRARIES  = libmyqttd.la
 
@@ -87,7 +92,7 @@ libmyqttd_la_SOURCES = \
 	myqttd-domain.c \
 	myqttd-users.c
 
-libmyqttd_la_LIBADD = $(AXL_LIBS)  $(PCRE_LIBS) 
+libmyqttd_la_LIBADD = $(AXL_LIBS)  $(PCRE_LIBS) $(INCLUDE_TLS_LIBS)
 libmyqttd_la_LDFLAGS = -Wl,-export-dynamic -ldl -no-undefined -export-symbols-regex '^(myqttd|__myqttd|exarg).*'
 
 libmyqttdincludedir = $(includedir)/myqttd
