myqtt: * [new] Several updates to delegate listener creation to an external handler   so MyQttd can register different handlers according to the protocol. Not only   that, this will allow starting different custom listeners that aren't supported   by base code. API added:
   - myqttd_ctx_add_listener_activator
   - MyQttdListenerActivator

--- a/server/myqtt.example.conf
+++ b/server/myqtt.example.conf
@@ -5,15 +5,11 @@
   <global-settings>
     <!-- port allocation configuration -->
     <ports>
+      <!-- <port [bind-addr='0.0.0.0'] [proto='mqtt']>__port_num__</port> -->
       <port>1883</port> <!-- iana registered port for plain MQTT -->
       <port>8883</port> <!-- iana registered port for TLS MQTT -->
     </ports>
 
-    <!-- listener configuration (address to listen) -->
-    <listener>
-      <name>0.0.0.0</name>
-    </listener>
-    
     <!-- log reporting configuration -->
     <log-reporting enabled="yes" use-syslog="yes">
       <general-log file="/var/log/myqtt/main.log" />
