--- a/server/test_10.conf
+++ b/server/test_10.conf
@@ -5,15 +5,11 @@
   <global-settings>
     <!-- port allocation configuration -->
     <ports>
-      <port>1883</port> <!-- iana registered port for plain MQTT -->
-      <port>8883</port> <!-- iana registered port for TLS MQTT -->
+      <!-- <port [bind-addr='0.0.0.0'] [proto='mqtt']>__port_num__</port> -->
+      <port proto="mqtt">1883</port> <!-- iana registered port for plain MQTT -->
+      <port proto="mqtt-tls">8883</port> <!-- iana registered port for TLS MQTT -->
     </ports>
 
-    <!-- listener configuration (address to listen) -->
-    <listener>
-      <name>0.0.0.0</name>
-    </listener>
-    
     <!-- log reporting configuration -->
     <log-reporting enabled="yes" use-syslog="yes">
       <general-log file="/var/log/myqtt/main.log" />
