--- a/server/modules/Makefile.am
+++ b/server/modules/Makefile.am
@@ -1,4 +1,8 @@
-SUBDIRS = mod-auth-xml
+if ENABLE_TLS_SUPPORT
+TLS_SUPPORT_DIR = mod-ssl
+endif
+
+SUBDIRS = mod-auth-xml $(TLS_SUPPORT_DIR)
 
 install-exec-hook:
 	mkdir -p $(sysconfdir)/myqtt/mods-enabled
