myqtt: * [fix] Several updates to complete myqttd server support for mod-ssl.   Finished first working test (test_11). Nice!!

--- a/server/myqtt.example.conf
+++ b/server/myqtt.example.conf
@@ -88,6 +88,17 @@
 
     <running-user uid="myqttd" gid="myqttd" />
 
+    <system-paths>
+      <!-- override runtime-datadir configuration: by default /var/lib -->
+      <!-- <path name="runtime_datadir" value="/var/lib" /> -->
+
+      <!-- override runtime-datadir configuration: by default /etc -->
+      <!-- <path name="sysconfdir" value="/etc" /> -->
+
+      <!-- override datadir configuration: by default /usr/share -->
+      <!-- <path name="datadir" value="/usr/share" /> -->
+    </system-paths>
+
   </global-settings>
 
   <modules>
@@ -158,5 +169,5 @@
     <include dir="/etc/myqtt/domains.d/" />
 
   </myqtt-domains>
-  
+
 </myqtt>
