--- a/server/test_10.conf
+++ b/server/test_10.conf
@@ -88,6 +88,17 @@
 
     <running-user uid="myqttd" gid="myqttd" />
 
+    <system-paths>
+      <!-- override runtime-datadir configuration: by default /var/lib -->
+      <!-- <path name="runtime_datadir" value="/var/lib" /> -->
+
+      <!-- override runtime-datadir configuration: by default /etc -->
+      <path name="sysconfdir" value="test_11" /> 
+
+      <!-- override datadir configuration: by default /usr/share -->
+      <!-- <path name="datadir" value="/usr/share" /> -->
+    </system-paths>
+
   </global-settings>
 
   <modules>
