myqtt: * [fix] Added initial code to support mod-web-socket module for myqttd server.   Added initial code to check web-socket support (test_12). Still more work   is required.

--- a/configure.ac
+++ b/configure.ac
@@ -365,6 +365,8 @@ server/modules/mod-auth-xml/Makefile
 server/modules/mod-auth-xml/mod-auth-xml.xml
 server/modules/mod-ssl/Makefile
 server/modules/mod-ssl/mod-ssl.xml
+server/modules/mod-web-socket/Makefile
+server/modules/mod-web-socket/mod-web-socket.xml
 test/Makefile
 myqtt-1.0.pc
 myqtt-tls-1.0.pc
