--- a/server/modules/Makefile.am
+++ b/server/modules/Makefile.am
@@ -2,7 +2,11 @@ if ENABLE_TLS_SUPPORT
 TLS_SUPPORT_DIR = mod-ssl
 endif
 
-SUBDIRS = mod-auth-xml $(TLS_SUPPORT_DIR)
+if ENABLE_WEBSOCKET_SUPPORT
+WEBSOCKET_SUPPORT_DIR = mod-web-socket
+endif
+
+SUBDIRS = mod-auth-xml $(TLS_SUPPORT_DIR) $(WEBSOCKET_SUPPORT_DIR)
 
 install-exec-hook:
 	mkdir -p $(sysconfdir)/myqtt/mods-enabled
