myqtt: * [fix] Added additional code to support MQTT over WebSocket module for myqttd   server. Still more work required to check its function.

--- a/server/Makefile.am
+++ b/server/Makefile.am
@@ -3,7 +3,8 @@ SUBDIRS = modules
 EXTRA_DIST = myqttd-ctx-private.h \
 	test_01.conf \
 	test_02.conf \
-	test_10.conf
+	test_10.conf \
+	test_12.conf
 
 etcdir = $(sysconfdir)/myqtt
 etc_DATA = myqtt.example.conf
