myqtt: * [fix] Several updates to make myqtt-web-socket API to update internal   references so myqtt_tls_is_on reports true when the connection was   received over a TLS WebSocket transport.
* [fix] Added new regression test to check support for MQTT over TLS
  WebSocket (wss). Reg test 20-b. 

* [fix] Finished initial working support for mod-myqtt-websocket with
  support for wss (TLS websocket). Added server regression test to check
  that module with test_13.

--- a/server/test_12/myqtt/web-socket/web-socket.conf
+++ b/server/test_12/myqtt/web-socket/web-socket.conf
@@ -8,6 +8,7 @@
 	       [ verify-peer="yes" ] 
 	       [ default="yes" ]
 	       /> -->
-    <cert serverName="localhost" crt="localhost.crt" key="localhost.key" />
+    <!-- use certificates used by myqtt-regression-listener -->
+    <cert serverName="localhost" crt="../test/localhost-server.crt" key="../test/localhost-server.key" />
   </certificates>
 </mod-web-socket>
