myqtt: * [fix] Updated myqttd server code to register log handlers for critical   messages reported by libMyQtt for the main and child contexts.
* [new] Added initial code for mod-status module to allow implementing 
  various operations to report status of the server and about oneself
  connection.

* [new] Implemented support for myqtt-client to get a list of current
  subscriptions that have current connection.

--- a/configure.ac
+++ b/configure.ac
@@ -351,6 +351,8 @@ server/modules/mod-ssl/Makefile
 server/modules/mod-ssl/mod-ssl.xml
 server/modules/mod-web-socket/Makefile
 server/modules/mod-web-socket/mod-web-socket.xml
+server/modules/mod-status/Makefile
+server/modules/mod-status/mod-status.xml
 client/Makefile
 test/Makefile
 myqtt-1.0.pc
